Bug 686188 - Replace nsCStringArray in news with nsTArray counterparts. r=bienvenu